--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="main">
     <div class="loading">
-      <img src="assets/images/empty 1.png" alt="picture" width="240" id="emptyTodo" class="">
+      <img src="assets/images/empty 1.png" alt="picture" width="240" id="loadingImage">
     </div>
     <hedaer class="header container-962">
       <a href="index.html"><img src="./assets/images/logo.png" alt="logo"/></a>
